{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 135,
  "lineage": "ee8e9cf5-56b8-c706-34ed-c8eea00a94ab",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f6b96807b7e3777a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-23-20-218.compute-1.amazonaws.com",
            "public_ip": "23.23.20.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03f76e32e4dc7a388",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-20-226-195.compute-1.amazonaws.com",
            "public_ip": "107.20.226.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1b"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:internet-gateway/igw-01bb60c5a317aca99",
            "id": "igw-01bb60c5a317aca99",
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-igw"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-igw"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6b96807b7e3777a",
            "id": "nat-0275143d9984a7979",
            "network_interface_id": "eni-0abf664a6d28fb810",
            "private_ip": "10.10.10.34",
            "public_ip": "23.23.20.218",
            "subnet_id": "subnet-015c1aa62c8c2d2d3",
            "tags": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f76e32e4dc7a388",
            "id": "nat-05bb32bf1db127d90",
            "network_interface_id": "eni-08bca909b58cbcb7e",
            "private_ip": "10.10.11.142",
            "public_ip": "107.20.226.195",
            "subnet_id": "subnet-06fea39b586511842",
            "tags": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1b"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-nat-us-east-1b"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ae4f0fb68cfd6fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0275143d9984a7979",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ae4f0fb68cfd6fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c4341fa2074354c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05bb32bf1db127d90",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c4341fa2074354c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01bb60c5a317aca99",
            "id": "r-rtb-0901ec37f6c296bee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0901ec37f6c296bee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:route-table/rtb-0d58d5ac088e63d62",
            "id": "rtb-0d58d5ac088e63d62",
            "owner_id": "443276483751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-database-route-table"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-database-route-table"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:route-table/rtb-0e5432f8145e13670",
            "id": "rtb-0e5432f8145e13670",
            "owner_id": "443276483751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-database-route-table"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-database-route-table"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:route-table/rtb-03ae4f0fb68cfd6fe",
            "id": "rtb-03ae4f0fb68cfd6fe",
            "owner_id": "443276483751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-private-route-table"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-private-route-table"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:route-table/rtb-07c4341fa2074354c",
            "id": "rtb-07c4341fa2074354c",
            "owner_id": "443276483751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-private-route-table"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-private-route-table"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:route-table/rtb-0901ec37f6c296bee",
            "id": "rtb-0901ec37f6c296bee",
            "owner_id": "443276483751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Development",
              "Name": "Development-public-route-table"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-public-route-table"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ad8cd036a1dac75",
            "route_table_id": "rtb-0d58d5ac088e63d62",
            "subnet_id": "subnet-0f31309ecb8d0e681"
          },
          "dependencies": [
            "module.networking.aws_route_table.database",
            "module.networking.aws_subnet.database_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b5db288bf49b350",
            "route_table_id": "rtb-0e5432f8145e13670",
            "subnet_id": "subnet-01ef8358280083d2f"
          },
          "dependencies": [
            "module.networking.aws_route_table.database",
            "module.networking.aws_subnet.database_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8f5b3ea3a0c9a22",
            "route_table_id": "rtb-03ae4f0fb68cfd6fe",
            "subnet_id": "subnet-0bd96b5e276822e69"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038ade87b81fb8551",
            "route_table_id": "rtb-07c4341fa2074354c",
            "subnet_id": "subnet-05e5b5ba23a0d6e85"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0411cca884214082a",
            "route_table_id": "rtb-0901ec37f6c296bee",
            "subnet_id": "subnet-015c1aa62c8c2d2d3"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06abf8ba061a208d5",
            "route_table_id": "rtb-0901ec37f6c296bee",
            "subnet_id": "subnet-06fea39b586511842"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:subnet/subnet-0f31309ecb8d0e681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.30.0/24",
            "id": "subnet-0f31309ecb8d0e681",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-database-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-database-subnet"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:subnet/subnet-01ef8358280083d2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.31.0/24",
            "id": "subnet-01ef8358280083d2f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-database-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-database-subnet"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:subnet/subnet-0bd96b5e276822e69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-0bd96b5e276822e69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:subnet/subnet-05e5b5ba23a0d6e85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.21.0/24",
            "id": "subnet-05e5b5ba23a0d6e85",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:subnet/subnet-015c1aa62c8c2d2d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-015c1aa62c8c2d2d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:subnet/subnet-06fea39b586511842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-06fea39b586511842",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-08486aac01b6b95b1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:443276483751:vpc/vpc-08486aac01b6b95b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-016bc7b7dadcdb33e",
            "default_route_table_id": "rtb-0b364ae8ffabe00d7",
            "default_security_group_id": "sg-086184144157da0b0",
            "dhcp_options_id": "dopt-b3194fc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08486aac01b6b95b1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b364ae8ffabe00d7",
            "owner_id": "443276483751",
            "tags": {
              "Environment": "Development",
              "Name": "Development-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "Development-vpc"
            }
          }
        }
      ]
    }
  ]
}